--- a/index.html
+++ b/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>JS to Python Converter</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <main class="container">
-    <h1>JavaScript ➜ Python Converter</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS ➜ Python Converter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Load Gemini from CDN -->
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@prewired/gemini@1.1.1/dist/index.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@prewired/gemini@1.1.1/styles.css">
+    <style>
+      body {
+        font-family: system-ui, sans-serif;
+        background-color: #f5f7fa;
+        padding: 2rem;
+      }
+      textarea, pre {
+        font-family: monospace;
+        width: 100%;
+        box-sizing: border-box;
+        padding: 1rem;
+        border-radius: 6px;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+      }
+      textarea {
+        height: 180px;
+        background: #ffffff;
+        border: 1px solid #ccc;
+      }
+      pre {
+        background: #f0f0f0;
+        min-height: 120px;
+      }
+      button {
+        background-color: #007acc;
+        color: white;
+        border: none;
+        padding: 0.75rem 1.25rem;
+        font-size: 1rem;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #005f99;
+      }
+    </style>
+  </head>
+  <body>
+    <g-container gap="md" style="max-width: 800px; margin: auto;">
+      <h1>JS ➜ Python Converter</h1>
 
-    <label for="jsInput">Enter JavaScript code:</label>
-    <textarea id="jsInput" placeholder="e.g. console.log('Hello world');"></textarea>
+      <label for="jsInput">Enter JavaScript code:</label>
+      <textarea id="jsInput" placeholder="e.g. console.log('Hello world');"></textarea>
 
-    <button id="convertBtn">Convert to Python</button>
+      <button id="convertBtn">Convert</button>
 
-    <h2>Python Output:</h2>
-    <pre id="pyOutput"></pre>
-  </main>
-</body>
+      <h2>Python Output:</h2>
+      <pre id="pyOutput"></pre>
+    </g-container>
+
+    <script type="module" src="main.js"></script>
+  </body>
 </html>
